# GradeAgent

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package.json
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  cli.py  config.py  db.py  gui.py  gui_runtime.py  gui_server.py  main.py  prompt_library.py
apps/api/app/api/: routes.py
apps/api/app/models/: domain.py
apps/api/app/schemas/: api.py
apps/api/app/services/: browser_navigation.py  grading_pipeline.py  gui_statistics.py  hybrid_automation_profiles.py  llm_provider.py  mlx_vlm_visual.py  model_router.py  ollama_browser_llm.py  release_service.py  rubric_validator.py  text_scoring.py  workflow_dispatcher.py
apps/api/app/workflows/: __init__.py  activities.py  grade_workflow.py  worker.py
apps/api/gradeagent_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/api/tests/: conftest.py  test_api.py  test_browser_navigation.py  test_cli.py  test_gui_statistics.py  test_hybrid_automation_profiles.py  test_llm_provider.py  test_prompt_library.py  test_rubric_validator.py
apps/macos/GradeAgentMacApp/: Package.swift
apps/macos/GradeAgentMacApp/.build/: build.db  plugin-tools.yaml
apps/macos/GradeAgentMacApp/.build/index-build/: build.db  debug.yaml
apps/macos/GradeAgentMacApp/Sources/GradeAgentMacApp/: GradeAgentMacApp.swift  GuiAPIClient.swift  GuiStore.swift  Models.swift  Views.swift  (+1 more)
apps/web/: eslint.config.mjs  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts
(+469 files in other folders)
