[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradeagent-api"
version = "0.1.0"
description = "FastAPI backend for the GradeAgent grading platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "google-genai>=1.59.0,<2.0.0",
  "langchain-anthropic>=0.3.0,<0.4.0",
  "langchain-google-genai>=2.0.0,<3.0.0",
  "langchain-ollama>=0.3.10,<0.4.0",
  "httpx>=0.27.0,<1.0.0",
  "langchain-openai>=0.2.0,<1.0.0",
  "openai>=2.16.0,<3.0.0",
  "playwright>=1.50.0,<2.0.0",
  "browser-use>=0.12.5,<0.13.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "redis>=5.2.0,<6.0.0",
  "rich>=14.3.1,<15.0.0",
  "sqlmodel>=0.0.22,<0.0.23",
  "temporalio>=1.9.0,<2.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0"
]
mlx = [
  "mlx-vlm>=0.4.3,<0.5.0"
]

[project.scripts]
gradeagent = "app.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
